--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libgsf"]
 	path = libgsf
-	url = https://git.gnome.org/browse/libgsf
+	url = https://git.merproject.org/mirror/libgsf.git
